--- a/react-native/app.json
+++ b/react-native/app.json
@@ -23,6 +23,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyD6JXQyzqHQNexxbxtj7y_h7mdRn-JqOok"
+        }
       }
     },
     "web": {
